--- a/Template/assets/css/blk-design-system.css
+++ b/Template/assets/css/blk-design-system.css
@@ -20810,3 +20810,11 @@ input.datetimepicker[data-color="yellow"]+.bootstrap-datetimepicker-widget.dropd
 }
 
 /*# sourceMappingURL=kit-free.css.map */
+
+
+.icon-container{
+  justify-content: none;
+
+
+}
+
