cambio de personal.css a navbar.css

--- a/src/views/Contactenos.html
+++ b/src/views/Contactenos.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../../Template\assets\css\personal.css">
+    <link rel="stylesheet" href="../../Template/assets/css/navbar.css">
     <link rel="stylesheet" href="../../Template/assets/css/contactanos.css">
 
     <title>Contactenos</title>
@@ -42,10 +42,10 @@
             </a>
             <!--indexar sus partes aquí-->
             <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Quienes Somos</a>
+              <a class="dropdown-item" href="../../index.html">Quienes Somos</a>
               <a class="dropdown-item" href="#">Productos</a>
               <a class="dropdown-item" href="#">Noticias</a>
-              <a class="dropdown-item" href="src/views/Contactenos.html">Contáctenos</a>
+              <a class="dropdown-item" href="#">Contáctenos</a>
             </div>
           </li>
   
@@ -127,5 +127,10 @@
         </form>
 
     </section>
+
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="../../node_modules/jquery/dist/jquery.js"></script>
+    <script src="../../node_modules/popper.js/dist/popper.js"></script>
+    <script src="../../node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 </html>
