--- a/src/views/Contactenos.html
+++ b/src/views/Contactenos.html
@@ -22,82 +22,73 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-white">
           <!-- Navbar content -->
-        <div class='container'>
-          <a href="../../index.html"><span class = 'navbar-brand nbar' >Lubricantes Saldur</span></a>
-          <ul class="nav">
-              <li class="nav-item mespaciado">
-                <a class="nav-link fa fa-facebook facebook" href="#"></a>
-              </li>
-              <li class="nav-item mespaciado">
-                <a class="nav-link fa fa-twitter twitter" href="#"></a>
-              </li>
-              <li class="nav-item espaciado mespaciado">
-                <a class="nav-link fa fa-google google" href="#"></a>
-              </li>
-  
-            <!--Aquí comienza el menú desplegable en nav-->
-          <li class="nav-item dropdown espaciado">
-            <a class="nav-link dropdown-toggle iespaciado" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"  aria-haspopup="true" aria-expanded="false">
-              Menu
-            </a>
-            <!--indexar sus partes aquí-->
-            <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="../../index.html">Quienes Somos</a>
-              <a class="dropdown-item" href="#">Productos</a>
-              <a class="dropdown-item" href="#">Noticias</a>
-              <a class="dropdown-item" href="#">Contáctenos</a>
+            <div class='container'>
+                <a href="../../index.html"><span class = 'navbar-brand nbar' >Lubricantes Saldur</span></a>
+                <ul class="nav">
+                    <li class="nav-item mespaciado">
+                        <a class="nav-link fa fa-facebook facebook" href="#"></a>
+                    </li>
+                    <li class="nav-item mespaciado">
+                        <a class="nav-link fa fa-twitter twitter" href="#"></a>
+                    </li>
+                    <li class="nav-item espaciado mespaciado">
+                        <a class="nav-link fa fa-google google" href="#"></a>
+                    </li>
+        
+                    <!--Aquí comienza el menú desplegable en nav-->
+                <li class="nav-item dropdown espaciado">
+                    <a class="nav-link dropdown-toggle iespaciado" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"  aria-haspopup="true" aria-expanded="false">
+                    Menu
+                    </a>
+                    <!--indexar sus partes aquí-->
+                    <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="../../index.html">Quienes Somos</a>
+                    <a class="dropdown-item" href="#">Productos</a>
+                    <a class="dropdown-item" href="#">Noticias</a>
+                    <a class="dropdown-item" href="#">Contáctenos</a>
+                    </div>
+                </li>
+        
+                <li class="nav.item ">
+                    <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text nencoger"><i class="fas fa-search"></i></span>
+                    </div>
+                    <input type="text" class="form-control nencoger nencoger1" placeholder="Búsqueda">
+                    </div>
+                </li>
+                </ul>
             </div>
-          </li>
-  
-          <li class="nav.item ">
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <span class="input-group-text nencoger"><i class="fas fa-search"></i></span>
-              </div>
-              <input type="text" class="form-control nencoger nencoger1" placeholder="Búsqueda">
-            </div>
-          </li>
-  
-            
-          </ul>
-          
-         
-    
-          
-        </div>
-  
-      </nav>
-  
+        </nav>
   
     </header>
     <section class="Formulario">
         <h2>Contacto</h2>
-        <form>
+        <form id="DatosContacto" method="POST">
             <div class="form-row">
                 <div class="form-group col-sm-6">
                     <label for="nombre">Nombre:</label>
-                    <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre">
+                    <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingrese su nombre">
                 </div>
                 <div class="form-group col-sm-6">
                     <label for="apellido">Apellido:</label>
-                    <input type="text" class="form-control" id="apellido" placeholder="Ingrese su apellido">
+                    <input type="text" class="form-control" id="apellido" name="apellido" placeholder="Ingrese su apellido">
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-group col-sm-7">
                     <label for="mail">Correo electrónico</label>
-                    <input type="email" class="form-control" id="mail" placeholder="Ingrese un correo de contacto">
+                    <input type="email" class="form-control" id="mail" name="email" placeholder="Ingrese un correo de contacto">
                 </div>
                 <div class="form-group col-sm-5">     
                     <label for="fecha">Fecha de Nacimiento: </label> 
                     <input class="form-control" type="date" name="fecha" value="2020-11-27" id="fecha" required="required">
                 </div>
-            </div>
-            
+            </div>   
             <div class="form-row">
                 <div class="form-group col-sm-6">
                     <label for="ciudad">Ciudad:</label>
-                    <input type="text" class="form-control" id="ciudad" placeholder="Ingrese su nombre">
+                    <input type="text" class="form-control" id="ciudad" name="ciudad" placeholder="Ingrese su nombre">
                 </div>
                 <div class="form-group col-sm-6">
                     <label for="provincia">Provincia:</label>
@@ -111,13 +102,13 @@
             </div>
             <div class="form-group">
                 <label for="comentario">Comentario</label>
-                <textarea id="comentario" class="form-control" rows="10">
+                <textarea id="comentario" name="comments" class="form-control" rows="10">
 
                 </textarea>    
             </div>
             <div class="form-group">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck">
+                    <input class="form-check-input" type="checkbox" name="promociones" id="gridCheck">
                     <label class="form-check-label" for="gridCheck">
                         Quiero recibir promociones
                     </label>
@@ -132,5 +123,6 @@
     <script src="../../node_modules/jquery/dist/jquery.js"></script>
     <script src="../../node_modules/popper.js/dist/popper.js"></script>
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../js/Contacto.js"></script>
 </body>
 </html>
