--- a/Template/assets/css/index.css
+++ b/Template/assets/css/index.css
@@ -10,6 +10,7 @@ body, header{
 	margin-top: 1rem;
 	margin-left: 12.50rem;
 	margin-right: 12.50rem;
+	padding-bottom: 15rem;
 	text-align: center;
 	
 	
@@ -22,21 +23,31 @@ body, header{
 		margin-top: 1rem;
 		margin-left: 2rem;
 		padding: 17rem;
+		text-align: center;
 	 }
 
 
 	 .main-saldur div{
-		margin-top: -6rem;
 
-		margin-left: -9rem;
+		margin-left: -10rem;
 	   
 	}
 
 	.txupbutton{
 		height: 50%;;
 		color: #4e658b; 
-		font-size: 1.5rem;
+		font-size: 0.75rem;
 		text-align: justify;
+	
+	 }
+
+	 .descubrenos{
+		border-style: none;
+		font-size: 2rem;
+		color:white;
+		background-color: #4e658b;
+		border-radius: 10px;
+	
 	
 	 }
 	
@@ -46,8 +57,6 @@ body, header{
  .main-saldur div{
 	 margin-top: -6rem;
 	 
-	
-
 	
 	 
  }
@@ -69,9 +78,10 @@ body, header{
  }
 
  .txupbutton{
-	height: 50%;;
+	width: 200%;;
 	color: #4e658b; 
 	font-size: 2.5rem;
+	margin-left: -15rem;
 
  }
 
