--- a/Template/assets/css/index.css
+++ b/Template/assets/css/index.css
@@ -69,6 +69,10 @@ body, header{
 	color:white;
 	background-color: #4e658b;
 	border-radius: 10px;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
 
 
  }
@@ -78,9 +82,10 @@ body, header{
  }
 
  .txupbutton{
+	font-weight: bold;
 	width: 200%;;
 	color: #4e658b; 
-	font-size: 2.5rem;
+	font-size: 3rem;
 	margin-left: -15rem;
 
  }
