seccion noticias y ubicacion

--- a/src/views/Contactenos.html
+++ b/src/views/Contactenos.html
@@ -46,6 +46,7 @@
                     <a class="dropdown-item" href="#">Productos</a>
                     <a class="dropdown-item" href="#">Noticias</a>
                     <a class="dropdown-item" href="#">Contáctenos</a>
+                    <a class="dropdown-item" href="./geolocalizacion.html">Ubicación</a>
                     </div>
                 </li>
         
