--- a/src/views/Contactenos.html
+++ b/src/views/Contactenos.html
@@ -24,7 +24,7 @@
           <!-- Navbar content -->
             <div class='container'>
                 <a href="../../index.html"><span class = 'navbar-brand nbar' >Lubricantes Saldur</span></a>
-                <ul class="nav">
+                <ul class="nav colorLetra"">
                     <li class="nav-item mespaciado">
                         <a class="nav-link fa fa-facebook facebook" href="#"></a>
                     </li>
