--- a/Template/assets/css/index.css
+++ b/Template/assets/css/index.css
@@ -5,24 +5,78 @@ body{
 }
 
  .main-saldur{
+	display: flex;
+	flex-direction: column;
 	padding: 15px;
 	background-color: #dbc15f;
 	margin: 20px;
 	text-align: center;
 	justify-content: space-around;
 	max-width: 1350px;
-	height: 450;
+	height: 450px;
  }
-/* 
+
  .Somos {
+	padding: 15px;
+	background-color: #F4F4F1;
+	margin: 20px;
+	text-align: center;
+	justify-content: space-around;
+	max-width: 1350px;
+ }
 
- } */
-
-@media screen and (max-width: 760){
-	/* .main-saldur{
-		
-	} */
+.Somos-descripcion{
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(20ch, 1fr));
+	grid-auto-rows: 125px;
+    grid-gap: 5px;
+    justify-items: center;
+    align-items: center;
+	align-content: space-between;
 }
+
+@media screen
+and (max-width: 760px) {
+  .Somos-descripcion {
+	display: flex;
+	flex-direction: column;
+  }
+  .main-saldur .txupbutton{
+	font-size: 1.5rem;
+  }
+}
+
+#presentacion{
+	font-size: 2rem;
+	font-weight: bold;
+	grid-column-start: 1;
+	grid-column-end: 3;
+	padding: 5px;
+	color: #2A3E50;
+}
+
+#mision {
+	grid-row-start: 2;
+	grid-column-start: 2;
+	grid-column-end: 5;	
+}
+
+#vision {
+	grid-row-start: 3;
+	grid-column-start: 2;
+	grid-column-end: 5;	
+}
+
+.Somos-descripcion img#log1 {
+	grid-column-start: 1;
+	grid-row-start: 2;
+}
+
+.Somos-descripcion img#log2 {
+	grid-column-start: 5;
+	grid-row-start: 2;
+}
+
 
 
 
