--- a/src/views/Contactenos.html
+++ b/src/views/Contactenos.html
@@ -23,28 +23,26 @@
         <nav class="navbar navbar-expand-lg bg-white">
           <!-- Navbar content -->
             <div class='container'>
-                <a href="../../index.html"><span class = 'navbar-brand nbar' >Lubricantes Saldur</span></a>
+                <a href="../../index.html"><span class = 'navbar-brand nbar colorLetra' >Lubricantes Saldur</span></a>
                 <ul class="nav colorLetra"">
-                    <li class="nav-item mespaciado">
-                        <a class="nav-link fa fa-facebook facebook" href="#"></a>
+                    <li class="nav-item mespaciado colorLetra">
+                        <a class="nav-link fa fa-facebook facebook colorLetra" href="#"></a>
                     </li>
                     <li class="nav-item mespaciado">
-                        <a class="nav-link fa fa-twitter twitter" href="#"></a>
+                        <a class="nav-link fa fa-twitter twitter colorLetra" href="#"></a>
                     </li>
                     <li class="nav-item espaciado mespaciado">
-                        <a class="nav-link fa fa-google google" href="#"></a>
+                        <a class="nav-link fa fa-google google colorLetra" href="#"></a>
                     </li>
         
                     <!--Aquí comienza el menú desplegable en nav-->
                 <li class="nav-item dropdown espaciado">
-                    <a class="nav-link dropdown-toggle iespaciado" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"  aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle iespaciado colorLetra" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"  aria-haspopup="true" aria-expanded="false">
                     Menu
                     </a>
                     <!--indexar sus partes aquí-->
                     <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="../../index.html">Quienes Somos</a>
-                    <a class="dropdown-item" href="#">Productos</a>
-                    <a class="dropdown-item" href="#">Noticias</a>
                     <a class="dropdown-item" href="#">Contáctenos</a>
                     <a class="dropdown-item" href="./geolocalizacion.html">Ubicación</a>
                     </div>
