--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -87,22 +87,22 @@
                 <ul class="nav">
                     <li class="nav-item">
                         <a class="nav-link" href="">
-                            side bar option 1
+                            Administrador-Saldur
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">
-                            side bar option 2
+                            Ventas
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">
-                            side bar option 3
+                            Datos
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">
-                            side bar option 4
+                            Estadisticas
                         </a>
                     </li>
                 </ul>
