--- a/Template/assets/css/dashboard.css
+++ b/Template/assets/css/dashboard.css
@@ -1,3 +1,7 @@
+
+
+
+
 .dissapeared {
   display: none;
 }
@@ -5,7 +9,7 @@
 .sidebar,
 .off-canvas-sidebar {
   height: 76%;
-  width: 230px;
+  max-width: 330px;
   position: fixed;
   top: 0;
   left: 0;
@@ -21,7 +25,7 @@
 }
 
 .sidebar-wrapper {
-  width: 100%;
+  min-width: 100%;
   min-height: 100%;
   max-height: calc(100vh - 705px);
   z-index: 4;
