fetch y axio marvel

--- a/src/views/Marvel.html
+++ b/src/views/Marvel.html
@@ -66,7 +66,9 @@
             <button id="btn">Ejecutar</button>
         </div>
     </section>
-    <script src="../js/ajaxMarvel.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
+    <!-- <script src="../js/axioMarvel.js"></script> -->
+    <script src="../js/fetchMarvel.js"></script>
 </body>
 </html>
     
