--- a/Backend/views/index.ejs
+++ b/Backend/views/index.ejs
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
+
+<head>
+    <title>
+        <%= title %>
+    </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+</head>
+
+<body>
+    <h1>
+        <%= title %>
+    </h1>
+    <form method="POST" action="/ingresar">
+        <p>Usuario: <input type="text" name="user" /></p>
+        <p>Contraseña: <input type="password" name="password" /></p>
+        <input type="submit" />
+    </form>
+</body>
+
 </html>
