sesiones de administrador y cliente

--- a/Backend/views/index.ejs
+++ b/Backend/views/index.ejs
@@ -12,7 +12,7 @@
     <h1>
         <%= title %>
     </h1>
-    <form method="POST" action="/ingresar">
+    <form method="POST" action="/login">
         <p>Usuario: <input type="text" name="user" /></p>
         <p>Contraseña: <input type="password" name="password" /></p>
         <input type="submit" />
