--- a/Frontend/src/app/components/report/report.component.html
+++ b/Frontend/src/app/components/report/report.component.html
@@ -4,9 +4,9 @@
 <section class="container-lg reporte-contenedor">
   <div class="container-fluid">
     <form class="d-flex row justify-around filtro">
-      <select (change)='requerimientoPorCaracter($event.target.value)' class="form-select col-12 col-md-6 col-lg-4" aria-label="Default select example">
+      <select (change)='requerimientoPorProducto($event.target.value)' class="form-select col-12 col-md-6 col-lg-4" aria-label="Default select example">
         <option selected>Nombre del producto...</option>
-        <option *ngFor="let producto of productos" [value]="producto.Nombre">{{producto.Nombre}}</option>
+        <option *ngFor="let producto of productos" [value]="producto">{{producto}}</option>
       </select>
       <div class="fecha fecha-desde col-12 col-md-6 col-lg-4">
         <label for="">Fecha </label>
@@ -25,17 +25,34 @@
       </tr>
     </thead>
     <tbody>
-      <!-- <tr *ngIf="character!=null">
-        <td>{{ character.id }}</td>
-        <td>{{ character.name }}</td>
-        <td>{{ character.status }}</td>
-        <td>{{ character.created | date }}</td>
-      </tr> -->
       <tr *ngFor="let producto of datos_filtrados | filter:filters">
         <td>{{ producto.Nombre }}</td>
         <td>{{ producto.Stock }}</td>
         <td>{{ producto.FechaIngreso | date }}</td>
         <td>{{ producto.FechaVencimiento | date }}</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
+<section class="container-lg reporte-contenedor proveedor-contenedor">
+  <table class="table table-striped tabla-resultados">
+    <thead>
+      <tr>
+        <th scope="col">Producto</th>
+        <th scope="col">Proveedor</th>
+        <th scope="col">Ciudad</th>
+        <th scope="col">Activo</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngIf="proveedores.length == 0">
+        <td class="sin-info" colspan="4">No hay informacion para mostrar!</td>
+      </tr>
+      <tr *ngFor="let proveedor of proveedores">
+        <td>{{ proveedor.producto }}</td>
+        <td>{{ proveedor.proveedor }}</td>
+        <td>{{ proveedor.ciudad }}</td>
+        <td>{{ proveedor.Activo }}</td>
       </tr>
     </tbody>
   </table>
